--- a/ace_eletsmeet/db/changes.txt
+++ b/ace_eletsmeet/db/changes.txt
@@ -135,3 +135,15 @@ CREATE TABLE IF NOT EXISTS `contact_group` (
 
 INSERT INTO `contact_group` (`group_id`, `group_name`, `group_status`) VALUES
 (1, 'General', '1');
+
+CREATE TABLE IF NOT EXISTS `user_inibox` (
+  `msg_id` int(10) NOT NULL AUTO_INCREMENT,
+  `msg_to` varchar(50) NOT NULL,
+  `msg_from` varchar(50) NOT NULL,
+  `msg_sub` varchar(255) NOT NULL,
+  `msg_content` text NOT NULL,
+  `msg_priority` enum('0','1','2','3') NOT NULL,
+  `msg_seen` enum('0','1') NOT NULL DEFAULT '0',
+  `msg_deleted` enum('0','1') NOT NULL DEFAULT '0',
+  PRIMARY KEY (`msg_id`)
+) ENGINE=InnoDB DEFAULT CHARSET=latin1 AUTO_INCREMENT=1 ;
